# Halo-mini-virus

./: CMakeLists.txt
src/: app.rc  app_constants.h  autostart.cpp  autostart.h  main.cpp  win32_common.h  window.cpp  window.h
